--- a/pic32-hal/Cargo.toml
+++ b/pic32-hal/Cargo.toml
@@ -5,6 +5,12 @@ authors = ["Kiffie van Haash"]
 edition = "2018"
 
 [dependencies]
+sysconfig = { git = "https://github.com/kiffie/mcu-rs.git" }
 vcell = "0.1.0"
 nb = "0.1.1"
-embedded-hal = "0.2.2"
+embedded-hal = { version = "0.2.3", features = ["unproven"] }
+
+pic32mx1xxfxxxb = { path ="../../pic32-pac/pic32mx1xxfxxxb", optional = true }
+pic32mx274fxxxb = { path ="../../pic32-pac/pic32mx274fxxxb", optional = true }
+pic32mx4xxfxxxh = { git = "https://github.com/kiffie/pic32-pac.git", optional = true }
+
