--- a/pic32-hal/Cargo.toml
+++ b/pic32-hal/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 vcell = "0.1.0"
 nb = "0.1.1"
 embedded-hal = { version = "0.2.3", features = ["unproven"] }
+mips_rt = { path = "../mips-rt" }
 
 pic32mx1xxfxxxb = { path ="../../pic32-pac/pic32mx1xxfxxxb", optional = true }
 pic32mx274fxxxb = { path ="../../pic32-pac/pic32mx274fxxxb", optional = true }
