add pre-compiled libnative.a for convenience

--- a/mips-rt/native_lib/Makefile
+++ b/mips-rt/native_lib/Makefile
@@ -11,7 +11,7 @@ CC=pic32-gcc
 
 LIB = libnative
 
-CFLAGS = -Wall -g -mips32r2 -msoft-float -Os -Iinclude
+CFLAGS = -Wall -mips32r2 -msoft-float -Os -Iinclude
 
 OBJECTS = crt0.o isr_context.o exception_table.o mips_irq.o general-exception.o
 
@@ -28,7 +28,7 @@ all: $(LIB).a
 
 $(LIB).a: $(OBJECTS)
 	rm -f $@
-	$(AR) crs $@ $^
+	$(AR) rcsD $@ $^
 
 clean:
 	rm -f $(OBJECTS) $(DEPS)
