--- a/pic32-hal/Cargo.toml
+++ b/pic32-hal/Cargo.toml
@@ -5,11 +5,12 @@ authors = ["Kiffie van Haash"]
 edition = "2018"
 
 [dependencies]
-vcell = "0.1.0"
 nb = "0.1.1"
 embedded-hal = { version = "0.2.3", features = ["unproven"] }
-mips_rt = { path = "../mips-rt" }
+mips_rt = { git = "https://github.com/kiffie/mcu-rs.git" }
+usb-device = { version = "0.2.5", optional = true }
 
 pic32mx1xxfxxxb = { git = "https://github.com/kiffie/pic32-pac.git", optional = true }
+pic32mx2xxfxxxb = { git = "https://github.com/kiffie/pic32-pac.git", optional = true }
 pic32mx274fxxxb = { git = "https://github.com/kiffie/pic32-pac.git", optional = true }
 pic32mx4xxfxxxh = { git = "https://github.com/kiffie/pic32-pac.git", optional = true }
