add DMA HAL module

--- a/pic32-hal/Cargo.toml
+++ b/pic32-hal/Cargo.toml
@@ -9,6 +9,7 @@ nb = "0.1.1"
 embedded-hal = { version = "0.2.3", features = ["unproven"] }
 mips_rt = { git = "https://github.com/kiffie/mcu-rs.git" }
 usb-device = { version = "0.2.5", optional = true }
+enumflags2 = "0.6.4"
 
 pic32mx1xxfxxxb = { git = "https://github.com/kiffie/pic32-pac.git", optional = true }
 pic32mx2xxfxxxb = { git = "https://github.com/kiffie/pic32-pac.git", optional = true }
