--- a/examples/blinky/Cargo.toml
+++ b/examples/blinky/Cargo.toml
@@ -11,10 +11,10 @@ pic32mx2xxfxxxb = ["pic32-hal/pic32mx2xxfxxxb"]
 default = ["pic32mx1xxfxxxb"]
 
 [dependencies]
-mips_rt = { git = "https://github.com/kiffie/mcu-rs.git" }
+mips_rt = { git = "https://github.com/kiffie/pic32-rs.git" }
 bare-metal = { version = "0.2.4", features = ["const-fn"] }
 embedded-hal = "0.2.3"
-pic32-hal = { git = "https://github.com/kiffie/mcu-rs.git" }
+pic32-hal = { git = "https://github.com/kiffie/pic32-rs.git" }
 
 [profile.release]
 opt-level = "s"
