--- a/examples/blinky/Cargo.toml
+++ b/examples/blinky/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "blinky"
-version = "0.1.0"
-authors = ["Kiffie"]
+version = "0.2.0"
+authors = ["Stephan <kiffie@mailbox.org>"]
 license = "MIT"
 edition = "2018"
 
