--- a/examples/usb_serial/Cargo.toml
+++ b/examples/usb_serial/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "usb_serial"
-version = "0.1.0"
-authors = ["Kiffie"]
+version = "0.2.0"
+authors = ["Stephan <kiffie@mailbox.org>"]
 license = "MIT"
 edition = "2018"
 
@@ -20,5 +20,5 @@ usb-device = "0.2.5"
 usbd-serial = "0.1.0"
 
 [profile.release]
-opt-level = "s"
+opt-level = 2
 lto = true
