--- a/mips-rt/Cargo.toml
+++ b/mips-rt/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
 name = "mips_rt"
-version = "0.1.0"
-authors = ["Kiffie van Haash"]
+version = "0.2.0"
+authors = ["Stephan <kiffie@mailbox.org"]
 edition = "2018"
+categories = ["embedded", "no-std"]
+description = "Minimal runtime for MIPS MCU cores"
+keywords = ["mips", "pic32", "runtime", "startup"]
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 r0 = "0.2.2"
 bare-metal = "0.2.4"
+mips-rt-macros = { path = "macros", version = "0.2.0" }
 
