specify "MIT OR Apache-2.0" license in Cargo.toml files

--- a/examples/usb_serial/Cargo.toml
+++ b/examples/usb_serial/Cargo.toml
@@ -2,7 +2,7 @@
 name = "usb_serial"
 version = "0.2.0"
 authors = ["Stephan <kiffie@mailbox.org>"]
-license = "MIT"
+license = "MIT OR Apache-2.0"
 edition = "2018"
 
 [features]
