--- a/examples/blinky/Cargo.toml
+++ b/examples/blinky/Cargo.toml
@@ -2,7 +2,7 @@
 name = "blinky"
 version = "0.2.0"
 authors = ["Stephan <kiffie@mailbox.org>"]
-license = "MIT"
+license = "MIT OR Apache-2.0"
 edition = "2018"
 
 [features]
