--- a/examples/i2c_oled_display/Cargo.toml
+++ b/examples/i2c_oled_display/Cargo.toml
@@ -2,7 +2,7 @@
 name = "i2c_oled_display"
 version = "0.3.0"
 authors = ["Stephan <kiffie@mailbox.org>"]
-license = "MIT"
+license = "MIT OR Apache-2.0"
 edition = "2018"
 
 [features]
