--- a/tinylog/Cargo.toml
+++ b/tinylog/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "tinylog"
 version = "0.1.0"
-authors = ["Kiffie van Haash"]
+authors = ["Stephan <kiffie@mailbox.org>"]
+repository = "https://github.com/kiffie/pic32-rs"
+license = "MIT OR Apache-2.0"
 edition = "2018"
 
 [dependencies]
