--- a/examples/i2c_oled_display/Cargo.toml
+++ b/examples/i2c_oled_display/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2018"
 
 [features]
 pic32mx1xxfxxxb = ["pic32-hal/pic32mx1xxfxxxb"]
-pic32mx274fxxxb = ["pic32-hal/pic32mx274fxxxb"]
+pic32mx2x4fxxxb = ["pic32-hal/pic32mx2x4fxxxb"]
 default = ["pic32mx1xxfxxxb"]
-#default = ["pic32mx274fxxxb"]
 
 [dependencies]
 mips_rt = { git = "https://github.com/kiffie/pic32-rs.git" }
