--- a/pic32-hal/Cargo.toml
+++ b/pic32-hal/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.3.0"
 authors = ["Kiffie van Haash"]
 edition = "2018"
 
+[features]
+pic32mx1xxfxxxb = ["pic32mx2xx/pic32mx1xxfxxxb"]
+pic32mx2xxfxxxb = ["pic32mx2xx/pic32mx2xxfxxxb"]
+pic32mx2x4fxxxb = ["pic32mx2xx/pic32mx2x4fxxxb"]
+
 [dependencies]
 nb = "0.1.1"
 embedded-hal = { version = "0.2.3", features = ["unproven"] }
@@ -12,18 +17,8 @@ mips_rt = { git = "https://github.com/kiffie/pic32-rs.git" }
 usb-device = { version = "0.2.5", optional = true }
 enumflags2 = "0.6.4"
 
-[dependencies.pic32mx1xxfxxxb]
-git = "https://github.com/kiffie/pic32-pac.git"
-optional = true
-features = ["rt"]
-
-[dependencies.pic32mx2xxfxxxb]
-git = "https://github.com/kiffie/pic32-pac.git"
-optional = true
-features = ["rt"]
-
-[dependencies.pic32mx274fxxxb]
-git = "https://github.com/kiffie/pic32-pac.git"
+[dependencies.pic32mx2xx]
+version = "0.3.0"
 optional = true
 features = ["rt"]
 
