--- a/examples/i2c_oled_display/Cargo.toml
+++ b/examples/i2c_oled_display/Cargo.toml
@@ -11,7 +11,7 @@ pic32mx2x4fxxxb = ["pic32-hal/pic32mx2x4fxxxb"]
 default = ["pic32mx1xxfxxxb"]
 
 [dependencies]
-mips_rt = { git = "https://github.com/kiffie/pic32-rs.git" }
+mips-rt = { git = "https://github.com/kiffie/pic32-rs.git" }
 embedded-hal = "0.2.3"
 tinylog = { git = "https://github.com/kiffie/pic32-rs.git" }
 pic32-hal = { git = "https://github.com/kiffie/pic32-rs.git" }
