--- a/examples/usb_serial/Cargo.toml
+++ b/examples/usb_serial/Cargo.toml
@@ -11,7 +11,7 @@ pic32mx2x4fxxxb = ["pic32-hal/pic32mx2x4fxxxb"]
 default = ["pic32mx2xxfxxxb"]
 
 [dependencies]
-mips_rt = { git = "https://github.com/kiffie/pic32-rs.git" }
+mips-rt = { git = "https://github.com/kiffie/pic32-rs.git" }
 alloc-pic32 = { git = "https://github.com/kiffie/alloc-pic32.git" }
 embedded-hal = "0.2.3"
 pic32-hal = { git = "https://github.com/kiffie/pic32-rs.git", features = ["usb-device"] }
