--- a/pic32-hal/Cargo.toml
+++ b/pic32-hal/Cargo.toml
@@ -13,7 +13,7 @@ pic32mx2x4fxxxb = ["pic32mx2xx/pic32mx2x4fxxxb"]
 nb = "0.1.1"
 embedded-hal = { version = "0.2.3", features = ["unproven"] }
 mips-mcu = "0.1.0"
-mips_rt = { git = "https://github.com/kiffie/pic32-rs.git" }
+mips-rt = { git = "https://github.com/kiffie/pic32-rs.git" }
 usb-device = { version = "0.2.5", optional = true }
 enumflags2 = "0.6.4"
 
