--- a/mips-rt/Cargo.toml
+++ b/mips-rt/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "mips-rt"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Stephan <kiffie@mailbox.org"]
 edition = "2018"
+repository = "https://github.com/kiffie/pic32-rs"
 categories = ["embedded", "no-std"]
 description = "Minimal runtime for MIPS MCU cores"
 keywords = ["mips", "pic32", "runtime", "startup"]
@@ -11,5 +12,5 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 r0 = "0.2.2"
 bare-metal = "0.2.4"
-mips-rt-macros = { path = "macros", version = "0.2.0" }
+mips-rt-macros = { path = "macros", version = "0.2.1" }
 
