--- a/mips-rt/macros/Cargo.toml
+++ b/mips-rt/macros/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "mips-rt-macros"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Stephan <kiffie@mailbox.org"]
 edition = "2018"
+repository = "https://github.com/kiffie/pic32-rs"
 categories = ["embedded", "no-std"]
 description = "Attributes re-exported in `mips-rt`"
 keywords = ["mips", "pic32", "runtime", "startup"]
@@ -18,6 +19,3 @@ proc-macro2 = "1.0"
 [dependencies.syn]
 features = ["extra-traits", "full"]
 version = "1.0"
-
-[dev-dependencies]
-mips-rt = { path = "..", version = "0.6" }
