--- a/examples/blinky/Cargo.toml
+++ b/examples/blinky/Cargo.toml
@@ -11,7 +11,7 @@ pic32mx2xxfxxxb = ["pic32-hal/pic32mx2xxfxxxb"]
 default = ["pic32mx1xxfxxxb"]
 
 [dependencies]
-mips-rt = { git = "https://github.com/kiffie/pic32-rs.git" }
+mips-rt = "0.2.0"
 embedded-hal = "0.2.3"
 pic32-hal = { git = "https://github.com/kiffie/pic32-rs.git" }
 
