--- a/examples/blinky/Cargo.toml
+++ b/examples/blinky/Cargo.toml
@@ -13,7 +13,7 @@ default = ["pic32mx1xxfxxxb"]
 [dependencies]
 mips-rt = "0.2.0"
 embedded-hal = "0.2.3"
-pic32-hal = { git = "https://github.com/kiffie/pic32-rs.git" }
+pic32-hal = "0.4.0"
 
 [profile.release]
 opt-level = 2
