--- a/pic32-hal/Cargo.toml
+++ b/pic32-hal/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "pic32-hal"
-version = "0.3.0"
-authors = ["Kiffie van Haash"]
+version = "0.4.1"
+authors = ["Stephan <kiffie@mailbox.org>"]
 edition = "2018"
+description = "Hardware Abstraction Layer (HAL) for PIC32 microcontrollers"
+repository = "https://github.com/kiffie/pic32-rs/tree/master/pic32-hal"
+keywords = ["no-std", "mips", "pic32", "hal"]
+license = "MIT OR Apache-2.0"
+include = ["README.md", "/src", "/build.rs"]
 
 [features]
 pic32mx1xxfxxxb = ["pic32mx2xx/pic32mx1xxfxxxb"]
@@ -19,11 +24,7 @@ enumflags2 = "0.6.4"
 
 [dependencies.pic32mx2xx]
 version = "0.3.0"
-optional = true
 features = ["rt"]
 
-[dependencies.pic32mx4xxfxxxh]
-git = "https://github.com/kiffie/pic32-pac.git"
-optional = true
-#features = ["rt"]
-
+[package.metadata.docs.rs]
+features = ["pic32mx2xxfxxxb"]
