--- a/examples/usb_serial/.cargo/config
+++ b/examples/usb_serial/.cargo/config
@@ -1,6 +1,7 @@
 
 [target.mipsel-unknown-none]
 rustflags = ["-C", "link-arg=-T32MX270F256B_procdefs.ld"]
+#rustflags = ["-C", "link-arg=-T32MX274F256B_procdefs.ld"]
 
 [build]
 target = "mipsel-unknown-none"
