--- a/pic32-hal/Cargo.toml
+++ b/pic32-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pic32-hal"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Stephan <kiffie@mailbox.org>"]
 edition = "2018"
 description = "Hardware Abstraction Layer (HAL) for PIC32 microcontrollers"
@@ -10,20 +10,21 @@ license = "MIT OR Apache-2.0"
 include = ["README.md", "/src", "/build.rs"]
 
 [features]
-pic32mx1xxfxxxb = ["pic32mx2xx/pic32mx1xxfxxxb"]
-pic32mx2xxfxxxb = ["pic32mx2xx/pic32mx2xxfxxxb"]
-pic32mx2x4fxxxb = ["pic32mx2xx/pic32mx2x4fxxxb"]
+pic32mx1xxfxxxb = ["pic32mx2xx/pic32mx1xxfxxxb", "device-selected"]
+pic32mx2xxfxxxb = ["pic32mx2xx/pic32mx2xxfxxxb", "device-selected"]
+pic32mx2x4fxxxb = ["pic32mx2xx/pic32mx2x4fxxxb", "device-selected"]
+device-selected = []
 
 [dependencies]
 nb = "0.1.1"
 embedded-hal = { version = "0.2.3", features = ["unproven"] }
-mips-mcu = "0.1.0"
-mips-rt = "0.2.0"
+mips-mcu = "0.2.0"
+mips-rt = "0.3.0"
 usb-device = { version = "0.2.5", optional = true }
 enumflags2 = "0.6.4"
 
 [dependencies.pic32mx2xx]
-version = "0.3.0"
+version = "0.4.1"
 features = ["rt"]
 
 [package.metadata.docs.rs]
