--- a/mips-mcu-alloc/Cargo.toml
+++ b/mips-mcu-alloc/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mips-mcu-alloc"
 description = "A heap allocator for MIPS based microcontrollers"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Stephan <kiffie@mailbox.org>"]
 repository = "https://github.com/kiffie/pic32-rs/tree/master/mips-mcu-alloc"
 license = "MIT OR Apache-2.0"
@@ -12,8 +12,9 @@ readme = "README.md"
 include = ["README.md", "/src", "LICENSE"]
 
 [dependencies]
-mips-mcu = "0.2.0"
+mips-mcu = "0.3.0"
 mips-rt = "0.3.0"
+critical-section = "1.0.0"
 
 [dependencies.linked_list_allocator]
 default-features = false
