--- a/examples/i2c_oled_display/Cargo.toml
+++ b/examples/i2c_oled_display/Cargo.toml
@@ -7,17 +7,20 @@ edition = "2018"
 
 [features]
 pic32mx1xxfxxxb = ["pic32-hal/pic32mx1xxfxxxb"]
+pic32mx2xxfxxxb = ["pic32-hal/pic32mx2xxfxxxb"]
 pic32mx2x4fxxxb = ["pic32-hal/pic32mx2x4fxxxb"]
-default = ["pic32mx1xxfxxxb"]
+default = ["pic32mx2xxfxxxb"]
 
 [dependencies]
+mips-mcu = { version = "0.3.0", features = ["critical-section-single-core"] }
 mips-rt = "0.3.0"
-embedded-hal = "0.2.3"
+embedded-hal = "0.2.7"
+critical-section = "1.0.0"
 tinylog = { git = "https://github.com/kiffie/pic32-rs.git" }
-pic32-hal = "0.6.1"
-ssd1306 = "0.2.6"
-embedded-graphics = "0.4.9"
-pic32-config-sector = "0.1.0"
+pic32-hal = "0.9.0"
+ssd1306 = "0.8.0"
+embedded-graphics = "0.8.0"
+pic32-config-sector = "0.2.0"
 
 [profile.release]
 opt-level = 2
