--- a/examples/usb_serial/Cargo.toml
+++ b/examples/usb_serial/Cargo.toml
@@ -11,14 +11,15 @@ pic32mx2x4fxxxb = ["pic32-hal/pic32mx2x4fxxxb"]
 default = ["pic32mx2xxfxxxb"]
 
 [dependencies]
+mips-mcu = { version = "0.3.0", features = ["critical-section-single-core"] }
 mips-rt = "0.3.0"
-mips-mcu-alloc = "0.5.0"
+mips-mcu-alloc = "0.6.0"
 embedded-hal = "0.2.3"
-pic32-hal = { version = "0.7.0", features = ["usb-device"] }
+pic32-hal = { version = "0.9.0", features = ["usb-device"] }
 panic-halt = "0.2.0"
 usb-device = "0.2.5"
 usbd-serial = "0.1.0"
-pic32-config-sector = "0.1.2"
+pic32-config-sector = "0.2.0"
 
 [profile.release]
 opt-level = 2
