--- a/pic32-hal/Cargo.toml
+++ b/pic32-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pic32-hal"
-version = "0.9.0"
+version = "0.10.0"
 authors = ["Stephan <kiffie@mailbox.org>"]
 edition = "2021"
 description = "Hardware Abstraction Layer (HAL) for PIC32 microcontrollers"
@@ -14,6 +14,8 @@ include = ["README.md", "/src", "/build.rs"]
 pic32mx1xxfxxxb = ["pic32mx2xx/pic32mx1xxfxxxb", "device-selected"]
 pic32mx2xxfxxxb = ["pic32mx2xx/pic32mx2xxfxxxb", "device-selected"]
 pic32mx2x4fxxxb = ["pic32mx2xx/pic32mx2x4fxxxb", "device-selected"]
+pic32mx37x = ["pic32mx470/pic32mx37xfxxxl", "device-selected"]
+pic32mx47x = ["pic32mx470/pic32mx47xfxxxl", "device-selected"]
 device-selected = []
 
 [dependencies]
@@ -28,6 +30,12 @@ enumflags2 = "0.7.7"
 [dependencies.pic32mx2xx]
 version = "0.7.0"
 features = ["rt", "critical-section"]
+optional = true
+
+[dependencies.pic32mx470]
+version = "0.1.0"
+features = ["rt", "critical-section"]
+optional = true
 
 [package.metadata.docs.rs]
 features = ["pic32mx2xxfxxxb", "usb-device"]
