--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,14 +25,27 @@ jobs:
             - run: cargo clippy --no-deps
               working-directory: ./examples/${{ matrix.example }}
 
+    ci-check-all:
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                crate: [pic32-hal]
+        steps:
+            - uses: actions/checkout@v2
+            - uses: actions-rs/toolchain@v1
+              with:
+                  profile: minimal
+                  toolchain: nightly
+                  override: true
+                  components: rust-src, clippy
+            - run: ./check_all
+              working-directory: ./${{ matrix.crate }}
+
     ci-crates:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                crate: [mips-rt, pic32-config-sector, pic32-hal]
-                include:
-                    - crate: pic32-hal
-                      features: "pic32mx2xxfxxxb, usb-device"
+                crate: [mips-rt, pic32-config-sector]
         steps:
             - uses: actions/checkout@v2
             - uses: actions-rs/toolchain@v1
