--- a/mips-mcu-alloc/Cargo.toml
+++ b/mips-mcu-alloc/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mips-mcu-alloc"
 description = "A heap allocator for MIPS based microcontrollers"
-version = "0.6.0"
+version = "0.6.1"
 authors = ["Stephan <kiffie@mailbox.org>"]
 repository = "https://github.com/kiffie/pic32-rs/tree/master/mips-mcu-alloc"
 license = "MIT OR Apache-2.0"
@@ -15,6 +15,7 @@ include = ["README.md", "/src", "LICENSE"]
 mips-mcu = "0.3.0"
 mips-rt = "0.3.0"
 critical-section = "1.0.0"
+log = { version = "0.4.19", optional = true }
 
 [dependencies.linked_list_allocator]
 default-features = false
