--- a/examples/blinky/Cargo.toml
+++ b/examples/blinky/Cargo.toml
@@ -13,10 +13,13 @@ default = ["pic32mx2xxfxxxb"]
 
 [dependencies]
 mips-mcu = { version = "0.3.0", features = ["critical-section-single-core"] }
-mips-rt = "0.3.0"
+mips-rt = "0.3.2"
+panic-halt = "0.2.0"
 embedded-hal = "0.2.7"
-pic32-hal = "0.9.0"
-pic32-config-sector = "0.2.0"
+pic32-hal = "0.10.0"
+pic32-config-sector = "0.3.0"
+
 [profile.release]
 opt-level = 2
 lto = true
+debug = true
