--- a/examples/i2c_oled_display/.cargo/config
+++ b/examples/i2c_oled_display/.cargo/config
@@ -1,6 +1,6 @@
 
 [target.mipsel-unknown-none]
-rustflags = ["-C", "link-arg=-T32MX270F256B_procdefs.ld"]
+rustflags = ["-C", "link-arg=-Tlink.x"]
 
 [build]
 target = "mipsel-unknown-none"
