--- a/mips-rt/Cargo.toml
+++ b/mips-rt/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 repository = "https://github.com/kiffie/pic32-rs"
 categories = ["embedded", "no-std"]
 description = "Minimal runtime for MIPS MCU cores"
+documentation = "https://docs.rs/mips-rt"
 keywords = ["mips", "pic32", "runtime", "startup"]
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-mips-rt-macros = { path = "macros", version = "0.3.0" }
+mips-rt-macros = { path = "macros", version = "0.3.4" }
 
