--- a/pic32-hal/Cargo.toml
+++ b/pic32-hal/Cargo.toml
@@ -27,6 +27,7 @@ mips-rt = "0.3.0"
 critical-section = "1.0.0"
 usb-device = { version = "0.3.2", optional = true }
 enumflags2 = "0.7.7"
+log = "0.4.22"
 
 [dependencies.pic32mx2xx]
 version = "0.7.0"
