--- a/examples/usb_serial/Cargo.toml
+++ b/examples/usb_serial/Cargo.toml
@@ -16,15 +16,10 @@ mips-rt = "0.3.6"
 mips-mcu-alloc = "0.6.2"
 embedded-hal = "1.0.0"
 pic32-hal = { version = "0.12.1", features = ["usb-device"] }
-# panic-halt = "1.0.0"
+panic-halt = "1.0.0"
 usb-device = { version = "0.3.2", features = ["control-buffer-256"] }
 usbd-serial = "0.2.2"
 pic32-config-sector = "0.3.0"
-
-log = "0.4.22"
-usb-log = { path = "../../../usb-log", features = ["panic-handler"] }
-critical-section = "1.2.0"
-embedded_hal_02 = { package = "embedded-hal", version = "0.2.7"}
 
 [profile.release]
 opt-level = 3
