--- a/examples/blinky/Cargo.toml
+++ b/examples/blinky/Cargo.toml
@@ -14,9 +14,10 @@ default = ["pic32mx2xxfxxxb"]
 [dependencies]
 mips-mcu = { version = "0.3.0", features = ["critical-section-single-core"] }
 mips-rt = "0.3.2"
-panic-halt = "0.2.0"
-embedded-hal = "0.2.7"
-pic32-hal = "0.11.0"
+panic-halt = "1.0.0"
+embedded-hal = "1.0.0"
+embedded-io = "0.6.1"
+pic32-hal = "0.13.0"
 pic32-config-sector = "0.3.0"
 
 [profile.release]
